--- a/config-service/build.gradle
+++ b/config-service/build.gradle
@@ -1,6 +1,25 @@
-dependencies {
-        compile("org.springframework.cloud:spring-cloud-starter-config")
-        compile("org.springframework.cloud:spring-cloud-config-server")
-        compile("org.springframework.cloud:spring-cloud-starter-eureka")
+import org.springframework.boot.gradle.tasks.run.BootRun
 
+dependencies {
+    compile("org.springframework.cloud:spring-cloud-starter-config")
+    compile("org.springframework.cloud:spring-cloud-config-server")
+    compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-server")
+}
+
+task bootRunConf1(type: BootRun, dependsOn: build) {
+    group = "Application"
+
+    doFirst() {
+        main = bootJar.mainClassName
+        classpath = sourceSets.main.runtimeClasspath
+        systemProperty 'spring.profiles.active', 'conf1'
+    }
+}
+
+task bootRunConf2(type:BootRun, dependsOn: build) {
+    doFirst() {
+        main = bootJar.mainClassName
+        classpath = sourceSets.main.runtimeClasspath
+        systemProperty 'spring.profiles.active', 'conf2'
+    }
 }
