--- a/eureka-config-client/src/main/resources/application.yml
+++ b/eureka-config-client/src/main/resources/application.yml
@@ -1,20 +1,48 @@
 pk:
   appconfig:
-    client1-alias: pk-client-es
-    client2-alias: pk-client-en
-    client1-port: 8184
-    client2-port: 8185
+    eureka-appname: eureka-peer-aware-cluster
+    peer1-alias: peer1
+    peer2-alias: peer2
+    peer1-port: 9000
+    peer2-port: 9001
+    cfg-appname: cfg-cluster
+    cfg1-alias: cfg1
+    cfg2-alias: cfg2
+    cfg1-port: 9100
+    cfg1-port: 9101
+    api-appname: api-cluster
+    api1-alias: api1
+    api2-alias: api2
+    api1-port: 9200
+    api2-port: 9201
 
+eureka:
+  instance:
+    lease-renewal-interval-in-seconds: 10
+
+---
 spring:
-  profiles: client1
+  profiles: api1
   application:
-    name: ${pk.appconfig.client1-alias}
+    name: ${pk.appconfig.api-appname}
 server:
-  port: ${pk.appconfig.client1-port}
+  port: ${pk.appconfig.api1-port}
+# to make it more interesting, let's have each client registering at a different instance
+eureka:
+  client:
+    service-url:
+      defaultZone: http://${${pk.appconfig.peer1-alias}}:${${pk.appconfig.peer1-port}}/eureka
 
+---
 spring:
   profiles: client2
   application:
-    name: ${pk.appconfig.client2-alias}
+    name: ${pk.appconfig.api-appname}
 server:
-  port: ${pk.appconfig.client2-port}
+  port: ${pk.appconfig.api2-port}
+# to make it more interesting, let's have each client registering at a different instance
+eureka:
+  client:
+    service-url:
+      defaultZone: http://${${pk.appconfig.peer2-alias}}:${${pk.appconfig.peer2-port}}/eureka
+
