--- a/eureka-config-client/src/main/resources/bootstrap.yml
+++ b/eureka-config-client/src/main/resources/bootstrap.yml
@@ -22,3 +22,19 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${pk.appconfig.peer1-address}/eureka/
+
+---
+spring:
+  profiles: client1
+spring:
+  cloud:
+    config:
+      profile: dev
+
+---
+spring:
+  profiles: client2
+spring:
+  cloud:
+    config:
+      profile: reg
