--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         }
     }
     ext {
-        setExtProperty("scsStartersVersion","1.6.3.RELEASE")
+//        setExtProperty("scsStartersVersion","1.6.3.RELEASE")
         setExtProperty("springCloudVersion","Finchley.RELEASE")
         springBootVersion = "2.0.1.RELEASE"
     }
@@ -38,7 +38,7 @@ subprojects {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
             mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-            mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${scsStartersVersion}"
+//            mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${scsStartersVersion}"
         }
     }
 
@@ -47,6 +47,7 @@ subprojects {
     dependencies {
         compile("org.springframework.boot:spring-boot-starter-web")
         compile("org.springframework.boot:spring-boot-starter-actuator")
+        testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
 
