--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,6 @@ include 'feign-client'
 include 'single-config-service'
 include 'single-eureka-service'
 include 'single-vender-service'
+include 'single-consumer-service'
+include 'specifications'
 
