--- a/single-consumer-service/build.gradle
+++ b/single-consumer-service/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
     compile("org.springframework.cloud:spring-cloud-starter-openfeign")
     compile("org.springframework.cloud:spring-cloud-netflix-hystrix-dashboard")
+    compile("org.springframework.cloud:spring-cloud-starter-netflix-hystrix")
 }
 
 
