--- a/single-vender-service/src/main/resources/application.yml
+++ b/single-vender-service/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 eureka:
   instance:
     hostname: localhost
@@ -8,6 +9,9 @@ eureka:
 
 server:
   port: 9850
+spring:
+  application:
+    name: single-vendor-service
 
 
 
